# arrow-tpc-ds

./: .gitignore  README.md  generate_fletchgen.sh  setup.py
TPCDATASET/: TPCDATASET.py  __init__.py  dataset.py  tpc_ds.py  tpc_h.py  tpch_suite.py  unisstest.py
cpp/: CMakeLists.txt  README.md
examples/: generate-input.py  generate-input_v_2-wip.py
parquet-tpch/: CMakeLists.txt  lineitem.cc
python/: '  Makefile  TPCDATASET.py  generate-input-star-schema.py  generate-input.py  generate-input_v_2-wip.py  test.py
test/: fletchgen.mmio.yaml  generate_fletchgen.sh  ss.txt  test.py  tpc.srec
test/vhdl/: Join.gen.vhd  Join_Mantle.gen.vhd  Join_Nucleus.gen.vhd  Join_ss.gen.vhd  SimTop_tc.gen.vhd  mmio.gen.vhd  mmio_pkg.gen.vhd
test/vhdmmio-doc/: index.html
tpcarrow/: __init__.py  __main__.py  tpc_ds.py  tpc_h.py  tpch_suite.py  unisstest.py
tpch-kit-v3/: README.md
tpch-kit-v3/dbgen/: Makefile  dbgen  qgen  queries.sql
